fixes seats not ejecting players when the seats' decoration is broken